<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="lbl_title">My Nanodegree Apps!</string>
    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores">SCORES APP</string>
    <string name="btn_library">LIBRARY APP</string>
    <string name="btn_bigger">BUILD IT BIGGER</string>
    <string name="btn_xyz">XYZ READER</string>
    <string name="btn_capstone">CAPSTONE: MY OWN APP</string>
    <string name="toast_spotify">This button will launch my spotify app!</string>
    <string name="toast_scores">This button will launch my scores app!</string>
    <string name="toast_library">This button will launch my library app!</string>
    <string name="toast_bigger">This button will launch my build app!</string>
    <string name="toast_xyz">This button will launch my xyz app!</string>
    <string name="toast_capstone">This button will launch my capstone app!</string>
</resources>
