<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ahumaro.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="#e0eaf1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_spotify"
        android:id="@+id/btn_spotify"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:backgroundTint="#f08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scores"
        android:id="@+id/btn_scores"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:backgroundTint="#f08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_library"
        android:id="@+id/btn_library"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:backgroundTint="#f08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bigger"
        android:id="@+id/btn_bigger"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:backgroundTint="#f08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_xyz"
        android:id="@+id/btn_xyz"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:backgroundTint="#f08C35" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:id="@+id/btn_capstone"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:backgroundTint="#c60240"
        android:textColor="#ffffff" />
</LinearLayout>
